@@ -20,43 +20,28 @@
 
 #include "hdhomerun_os.h"
 
+static DWORD random_get32_context_tls = TlsAlloc();
+
 uint32_t random_get32(void)
 {
-	HCRYPTPROV hProv;
-	if (!CryptAcquireContext(&hProv, 0, 0, PROV_RSA_FULL, CRYPT_VERIFYCONTEXT)) {
-		return (uint32_t)getcurrenttime();
+	HCRYPTPROV *phProv = (HCRYPTPROV *)TlsGetValue(random_get32_context_tls);
+	if (!phProv) {
+		phProv = (HCRYPTPROV *)calloc(1, sizeof(HCRYPTPROV));
+		CryptAcquireContext(phProv, 0, 0, PROV_RSA_FULL, CRYPT_VERIFYCONTEXT);
+		TlsSetValue(random_get32_context_tls, phProv);
 	}
 
 	uint32_t Result;
-	CryptGenRandom(hProv, sizeof(Result), (BYTE*)&Result);
+	if (!CryptGenRandom(*phProv, sizeof(Result), (BYTE *)&Result)) {
+		return (uint32_t)getcurrenttime();
+	}
 
-	CryptReleaseContext(hProv, 0);
 	return Result;
 }
 
 uint64_t getcurrenttime(void)
 {
-	static pthread_mutex_t lock = INVALID_HANDLE_VALUE;
-	static uint64_t result = 0;
-	static uint32_t previous_time = 0;
-
-	/* Initialization is not thread safe. */
-	if (lock == INVALID_HANDLE_VALUE) {
-		pthread_mutex_init(&lock, NULL);
-	}
-
-	pthread_mutex_lock(&lock);
-
-	uint32_t current_time = GetTickCount();
-
-	if (current_time > previous_time) {
-		result += current_time - previous_time;
-	}
-
-	previous_time = current_time;
-
-	pthread_mutex_unlock(&lock);
-	return result;
+	return GetTickCount64();
 }
 
 void msleep_approx(uint64_t ms)
